# cheat-me

./: .gitignore  AGENTS.md  Dockerfile  README.md  SKILL.md  agent_orchestrator.py  agent_rules.yaml  audit_addon.py  audit_addon_debug.py  capture_script.py  debug_ws.py  docker-compose.yml  main.py  pyproject.toml  run_automation.py  run_security_scan.sh  security_analyzer.py  sitemap_service.py  start_graphql.py  test_websocket.py
.github/workflows/: security-scan.yml
.spec/: caido-graphiql.md  strix-caido.md  tree.md  why-caido.md
docs/: ARCHITECTURE.md  CF_IMPLEMENTATION.md  CF_TESTING.md  CI_CD_INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  REFACTORING_V2.md  TESTING_GUIDE.md  rules-quick-reference.md  security-rules.md
init-db/: 01-init.sql  02-crawl-extensions.sql
server/: db.py  main.py  models.py  schema.py
tools/: query_sitemap.py  verify_sitemap.py
walking-web/: .gitignore  SKILL.md  business_flow_detector.py  crawl_cli.py  crawl_config.yaml  crawl_orchestrator.py  crawl_queue.py  link_extractor.py  link_prioritizer.py
