[project]
name = "playwright-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "databases[postgresql]>=0.9.0",
    "fastapi>=0.128.0",
    "mitmproxy>=12.2.1",
    "playwright>=1.58.0",
    "psycopg2-binary>=2.9.11",
    "pytest-playwright>=0.7.2",
    "requests>=2.32.5",
    "strawberry-graphql[fastapi]>=0.290.0",
    "uvicorn>=0.40.0",
    "beautifulsoup4>=4.12.0",
    "scikit-learn>=1.4.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "aiohttp>=3.9.0",
]
